--- a/login.html
+++ b/login.html
@@ -17,12 +17,6 @@
     <div class="nav-container">
       <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo" onclick="window.location.href='index.html'">
       <div class="nav-links">
-
-
-        <!--<button class="nav-btn" id="contatoBtn">Contato</button> colocar no footer  -->
-
-
-        
       </div>
     </div>
   </nav>
@@ -31,14 +25,14 @@
     <div class="login-container">
       <h1>Boas-vindas de volta!</h1>
       <p>Estamos muito felizes em te ver novamente.</p>
-      <form class="login-form">
+      <form class="login-form" id="formLogin">
         <div>
           <label for="email">E-mail</label>
-          <input type="email" id="email" placeholder="Digite seu e-mail" required>
+          <input name="email" type="email" id="email" placeholder="Digite seu e-mail" required>
         </div>
         <div>
           <label for="password">Senha</label>
-          <input type="password" id="password" placeholder="Digite sua senha" required>
+          <input name="senha" type="password" id="senha" placeholder="Digite sua senha" required>
         </div>
         <button type="submit" class="login-btn">Entrar</button>
       </form>
