Tela de Pagamento

--- a/eventos.html
+++ b/eventos.html
@@ -93,7 +93,7 @@
 
     <!-- EVENTO 1 -->
     <a href="ex.html" class="card"
-      data-city="sp" data-type="show" data-start="2025-11-04" data-end="2025-12-11"
+      data-city="sp" data-type="show" data-start="2025-12-16" data-end="2025-12-20"
       data-event-id="1234" data-local-id="32" >
 
       <div class="img-container">
@@ -108,7 +108,7 @@
 
     <!-- EVENTO 2 -->
     <a href="ex.html" class="card"
-      data-city="sp" data-type="esporte" data-start="2025-11-06" data-end="2025-11-06"
+      data-city="sp" data-type="esporte" data-start="2025-12-15" data-end="2025-12-26"
       data-event-id="1235" data-local-id="32">
 
       <div class="img-container">
@@ -123,7 +123,7 @@
 
     <!-- EVENTO 3 -->
     <a href="ex.html" class="card"
-      data-city="sp" data-type="show" data-start="2025-11-06" data-end="2025-11-06"
+      data-city="sp" data-type="show" data-start="2025-12-20" data-end=""
       data-event-id="1236" data-local-id="32">
 
       <div class="img-container">
@@ -138,7 +138,7 @@
 
     <!-- EVENTO 4 -->
     <a href="ex.html" class="card"
-      data-city="rj" data-type="show" data-start="2025-12-02" data-end="2025-12-02"
+      data-city="rj" data-type="show" data-start="2025-12-22" data-end="2025-12-24"
       data-event-id="1237" data-local-id="77">
 
       <div class="img-container">
@@ -153,7 +153,7 @@
 
     <!-- EVENTO 5 -->
     <a href="ex.html" class="card"
-      data-city="bh" data-type="teatro" data-start="2025-12-10" data-end="2025-12-20"
+      data-city="bh" data-type="teatro" data-start="2025-12-17" data-end="2025-12-20"
       data-event-id="1238" data-local-id="55">
 
       <div class="img-container">
@@ -168,7 +168,7 @@
 
     <!-- EVENTO 6 -->
     <a href="ex.html" class="card"
-      data-city="cur" data-type="exposicao" data-start="2025-12-01" data-end="2025-12-18"
+      data-city="cur" data-type="exposicao" data-start="2025-12-28" data-end="2025-12-29"
       data-event-id="1239" data-local-id="90">
 
       <div class="img-container">
@@ -188,7 +188,7 @@
 
 
   </main>
-
+6
   <script src="JS/eventos.js"></script>
 </body>
 </html>
